[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "proxy_client"
path = "src/bin/proxy_client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "http_proxy"
path = "src/bin/http_proxy.rs"

[[bin]]
name = "raw_proxy"
path = "src/bin/raw_proxy.rs"

[dependencies]
config = "0.15.11"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_toml = "0.0.1"
sys-info = "0.9.1"
uptime_lib = "0.3.1"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
